# cppdb

./: .clang-tidy  .gitignore  CMakeLists.txt  helloworld  helloworld.cpp  readme.md  runtests.sh
metadata/: cell.cpp  cell.h
operators/: abstract_iterator.h  conditions.cpp  conditions.h  execution_plan.h  execution_plan_base.h  expressions.h  filter.cpp  filter.h  full_scan.cpp  full_scan.h  projection_operator.cpp  projection_operator.h  single_row_operator.cpp  single_row_operator.h  union_all_operator.cpp  union_all_operator.h  where_operator.cpp  where_operator.h
query_engine/: compiler.cpp  compiler.h
sql_interface/: compiler.cpp  compiler.h  execution_plan.h  parser.cpp  parser.h  scanner.cpp  scanner.h
storage/: dbmetadata.cpp  dbmetadata.h  dbreader.cpp  dbreader.h  dbwriter.cpp  dbwriter.h  storage.cpp  storage.h
tests/: conditions_test.cpp  formatter_test.cpp  full_scan_test.cpp  operators_test.cpp  parser_test.cpp  scanner_test.cpp  serialization_test.cpp  sql_test.cpp  storage_test.cpp  where_operator_test.cpp
types/: type_base.cpp  type_base.h  type_interface.cpp  type_interface.h
utils/: formatter.cpp  formatter.h  serialization.cpp  serialization.h  test_dbengine.cpp  test_dbengine.h
